[package]
name = "usb_io"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["sync", "net", "rt"] }
tracing = "0.1"
wire_weaver = { path = "../wire_weaver/wire_weaver" }
wire_weaver_usb_host = { path = "../wire_weaver/wire_weaver_usb_host" }
futures-lite = "2.6"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-repl = "0.3"
console = "0.15"
tracing-subscriber = "0.3"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }